# CODELENS

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  repositories.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  code_chunk.py  repository.py  search_log.py  user.py
backend/app/schemas/: answer.py  auth.py  bug.py  repository.py  review.py  search.py
backend/app/services/: answer_service.py  auth_service.py  bug_localization_service.py  chunker.py  embedder.py  indexing_service.py  ingestion_service.py  log_parser.py  review_service.py  search_service.py  storage.py  vector_store.py
backend/tests/: conftest.py  test_answer.py  test_auth.py  test_bug_localization.py  test_chunker.py  test_embedder.py  test_health.py  test_indexing.py  test_models.py  test_repositories.py  test_review.py  test_search.py  test_storage.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: auth-form.tsx  auth-provider.tsx  backend-status.tsx  code-block.tsx  require-auth.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ask.tsx  bugs.tsx  dashboard.tsx  landing.tsx  login.tsx  register.tsx  repositories.tsx  review.tsx  search.tsx
(+1 files in other folders)
