[project]
name = "codelens-backend"
version = "0.1.0"
description = "CodeLens — AI codebase search & bug localization API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "pyjwt>=2.13.0",
    "pwdlib[bcrypt]>=0.3.0",
    "boto3>=1.43.51",
    "python-multipart>=0.0.32",
    "httpx>=0.28.1",
    "sentence-transformers>=5.6.0",
    "chromadb>=1.5.9",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.12.5",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
# Dev-only tooling. Installed with `uv sync` but excluded from production images.
dev = [
    "pytest>=8.3",
    "httpx>=0.27",        # test client for FastAPI (async-capable)
    "ruff>=0.8",          # linter + formatter (replaces black+flake8+isort)
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
